// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateEntityIds output snapshots produces stable entities.ids.generated.ts with entity classes: entities.ids.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate entity-ids
export const M = {
  "orders": "orders",
  "products": "products"
} as const
export const E = {
  "orders": {
    "sales_order": "orders:sales_order",
    "order_item": "orders:order_item"
  },
  "products": {
    "product": "products:product",
    "category": "products:category"
  }
} as const
export type KnownModuleId = keyof typeof M
export type KnownEntities = typeof E
"
`;

exports[`generateEntityIds output snapshots produces stable entities.ids.generated.ts with entity classes: entity-fields-registry.ts 1`] = `
"// AUTO-GENERATED by mercato generate entity-ids
// Static registry for entity fields - eliminates dynamic imports for Turbopack compatibility

export const entityFieldsRegistry: Record<string, Record<string, string>> = {
  category: {
    id: 'id',
    tenant_id: 'tenant_id',
    name: 'name',
    parent_id: 'parent_id'
  },
  custom_record: {
    id: 'id',
    tenant_id: 'tenant_id',
    title: 'title'
  },
  order_item: {
    id: 'id',
    order_id: 'order_id',
    product_name: 'product_name',
    quantity: 'quantity'
  },
  product: {
    id: 'id',
    tenant_id: 'tenant_id',
    name: 'name',
    sku: 'sku',
    price: 'price'
  },
  sales_order: {
    id: 'id',
    tenant_id: 'tenant_id',
    total_gross: 'total_gross',
    status: 'status',
    created_at: 'created_at'
  }
}

export function getEntityFields(slug: string): Record<string, string> | undefined {
  return entityFieldsRegistry[slug]
}
"
`;

exports[`generateEntityIds output snapshots produces stable per-entity field files: entity/category/index.ts 1`] = `
"export const id = 'id'
export const tenant_id = 'tenant_id'
export const name = 'name'
export const parent_id = 'parent_id'
"
`;

exports[`generateEntityIds output snapshots produces stable per-entity field files: entity/custom_record/index.ts 1`] = `
"export const id = 'id'
export const tenant_id = 'tenant_id'
export const title = 'title'
"
`;

exports[`generateEntityIds output snapshots produces stable per-entity field files: entity/order_item/index.ts 1`] = `
"export const id = 'id'
export const order_id = 'order_id'
export const product_name = 'product_name'
export const quantity = 'quantity'
"
`;

exports[`generateEntityIds output snapshots produces stable per-entity field files: entity/product/index.ts 1`] = `
"export const id = 'id'
export const tenant_id = 'tenant_id'
export const name = 'name'
export const sku = 'sku'
export const price = 'price'
"
`;

exports[`generateEntityIds output snapshots produces stable per-entity field files: entity/sales_order/index.ts 1`] = `
"export const id = 'id'
export const tenant_id = 'tenant_id'
export const total_gross = 'total_gross'
export const status = 'status'
export const created_at = 'created_at'
"
`;

exports[`generateModuleDi output snapshots produces stable di.generated.ts with multiple modules 1`] = `
"// AUTO-GENERATED by mercato generate di
import * as D_orders_0 from '@open-mercato/core/modules/orders/di'
import * as D_products_1 from '@open-mercato/core/modules/products/di'
import * as D_custom_app_2 from '../../src/modules/custom_app/di'

const diRegistrars = [
  D_orders_0.register,
  D_products_1.register,
  D_custom_app_2.register
].filter(Boolean) as (((c: any) => void)|undefined)[]

export { diRegistrars }
export default diRegistrars
"
`;

exports[`generateModuleDi output snapshots produces stable di.generated.ts with zero modules 1`] = `
"// AUTO-GENERATED by mercato generate di


const diRegistrars = [
  
].filter(Boolean) as (((c: any) => void)|undefined)[]

export { diRegistrars }
export default diRegistrars
"
`;

exports[`generateModuleEntities output snapshots produces stable entities.generated.ts with multiple modules 1`] = `
"// AUTO-GENERATED by mercato generate entities
import * as E_orders_0 from '@open-mercato/core/modules/orders/data/entities'
import * as E_products_1 from '@open-mercato/core/modules/products/data/entities'
import * as E_custom_app_2 from '../../src/modules/custom_app/data/entities'

function enhanceEntities(namespace: Record<string, unknown>, moduleId: string): any[] {
  return Object.entries(namespace)
    .filter(([, value]) => typeof value === 'function')
    .map(([exportName, value]) => {
      const entity = value as { entityName?: string }
      if (entity && typeof entity === 'function' && !Object.prototype.hasOwnProperty.call(entity, 'entityName')) {
        Object.defineProperty(entity, 'entityName', {
          value: \`\${moduleId}.\${exportName}\`,
          configurable: true,
          enumerable: false,
          writable: false,
        })
      }
      return entity
    })
}

export const entities = [
  ...enhanceEntities(E_orders_0, 'orders'),
  ...enhanceEntities(E_products_1, 'products'),
  ...enhanceEntities(E_custom_app_2, 'custom_app')
]
"
`;

exports[`generateModuleEntities output snapshots produces stable entities.generated.ts with zero modules 1`] = `
"// AUTO-GENERATED by mercato generate entities


function enhanceEntities(namespace: Record<string, unknown>, moduleId: string): any[] {
  return Object.entries(namespace)
    .filter(([, value]) => typeof value === 'function')
    .map(([exportName, value]) => {
      const entity = value as { entityName?: string }
      if (entity && typeof entity === 'function' && !Object.prototype.hasOwnProperty.call(entity, 'entityName')) {
        Object.defineProperty(entity, 'entityName', {
          value: \`\${moduleId}.\${exportName}\`,
          configurable: true,
          enumerable: false,
          writable: false,
        })
      }
      return entity
    })
}

export const entities = [
  
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: ai-tools.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import * as AI_TOOLS_orders_12 from "@open-mercato/core/modules/orders/ai-tools"

type AiToolConfigEntry = { moduleId: string; tools: unknown[] }

const aiToolConfigEntriesRaw: AiToolConfigEntry[] = [
  { moduleId: 'orders', tools: (AI_TOOLS_orders_12.aiTools ?? AI_TOOLS_orders_12.default ?? []) }
]

export const aiToolConfigEntries: AiToolConfigEntry[] = aiToolConfigEntriesRaw.filter(
  (entry): entry is AiToolConfigEntry => Array.isArray(entry.tools) && entry.tools.length > 0,
)

export const allAiTools = aiToolConfigEntries.flatMap(e => e.tools)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: analytics.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { AnalyticsModuleConfig } from '@open-mercato/shared/modules/analytics'

import * as ANALYTICS_orders_14 from "@open-mercato/core/modules/orders/analytics"
type AnalyticsConfigEntry = { moduleId: string; config: AnalyticsModuleConfig | null }

const entriesRaw: AnalyticsConfigEntry[] = [
  { moduleId: 'orders', config: (ANALYTICS_orders_14.default ?? ANALYTICS_orders_14.analyticsConfig ?? ANALYTICS_orders_14.config ?? null) }
]
const entries = entriesRaw.filter((entry): entry is { moduleId: string; config: AnalyticsModuleConfig } => entry.config != null)

export const analyticsModuleConfigEntries = entries
export const analyticsModuleConfigs: AnalyticsModuleConfig[] = entries.map((entry) => entry.config)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: api-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ApiRouteManifestEntry } from '@open-mercato/shared/modules/registry'

export const apiRoutes: ApiRouteManifestEntry[] = [
  { moduleId: "orders", kind: "route-file", path: "/orders", methods: ["GET", "POST"], load: async () => import("@open-mercato/core/modules/orders/api/orders/route") },
  { moduleId: "products", kind: "route-file", path: "/products", methods: ["GET", "POST", "PUT", "DELETE"], load: async () => import("@open-mercato/core/modules/products/api/products/route") }
]

export default apiRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: backend-middleware.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { PageMiddlewareRegistryEntry, PageRouteMiddleware } from '@open-mercato/shared/modules/middleware/page'

import * as BACKEND_MIDDLEWARE_orders_23 from "@open-mercato/core/modules/orders/backend/middleware"
type BackendMiddlewareEntry = { moduleId: string; middleware: PageRouteMiddleware[] }

const entriesRaw: BackendMiddlewareEntry[] = [
  { moduleId: 'orders', middleware: ((BACKEND_MIDDLEWARE_orders_23 as any).middleware ?? (BACKEND_MIDDLEWARE_orders_23 as any).default ?? []) }
]

export const backendMiddlewareEntries: PageMiddlewareRegistryEntry[] = entriesRaw
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: backend-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { BackendRouteManifestEntry } from '@open-mercato/shared/modules/registry'


export const backendRoutes: BackendRouteManifestEntry[] = [
  { moduleId: "orders", pattern: "/backend/orders", requireAuth: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.requireAuth, requireRoles: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.requireRoles, requireFeatures: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.requireFeatures, requireCustomerAuth: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.requireCustomerAuth, requireCustomerFeatures: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.requireCustomerFeatures, title: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageTitle ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.title, titleKey: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageTitleKey ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.titleKey, group: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageGroup ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.group, groupKey: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageGroupKey ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.groupKey, icon: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.icon, order: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageOrder ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.order, priority: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pagePriority ?? (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.priority, navHidden: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.navHidden, visible: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.visible, enabled: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.enabled, breadcrumb: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.breadcrumb, pageContext: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.pageContext, placement: (({"requireAuth":true,"pageTitle":"Orders","group":"Sales"} as any))?.placement, load: async () => { const mod = await import("@open-mercato/core/modules/orders/backend/page"); return (mod.default ?? mod) as any } },
  { moduleId: "orders", pattern: "/backend/details/[id]", requireAuth: ((undefined as any))?.requireAuth, requireRoles: ((undefined as any))?.requireRoles, requireFeatures: ((undefined as any))?.requireFeatures, requireCustomerAuth: ((undefined as any))?.requireCustomerAuth, requireCustomerFeatures: ((undefined as any))?.requireCustomerFeatures, title: ((undefined as any))?.pageTitle ?? ((undefined as any))?.title, titleKey: ((undefined as any))?.pageTitleKey ?? ((undefined as any))?.titleKey, group: ((undefined as any))?.pageGroup ?? ((undefined as any))?.group, groupKey: ((undefined as any))?.pageGroupKey ?? ((undefined as any))?.groupKey, icon: ((undefined as any))?.icon, order: ((undefined as any))?.pageOrder ?? ((undefined as any))?.order, priority: ((undefined as any))?.pagePriority ?? ((undefined as any))?.priority, navHidden: ((undefined as any))?.navHidden, visible: ((undefined as any))?.visible, enabled: ((undefined as any))?.enabled, breadcrumb: ((undefined as any))?.breadcrumb, pageContext: ((undefined as any))?.pageContext, placement: ((undefined as any))?.placement, load: async () => { const mod = await import("@open-mercato/core/modules/orders/backend/details/[id]/page"); return (mod.default ?? mod) as any } },
  { moduleId: "products", pattern: "/backend/products", requireAuth: ((undefined as any))?.requireAuth, requireRoles: ((undefined as any))?.requireRoles, requireFeatures: ((undefined as any))?.requireFeatures, requireCustomerAuth: ((undefined as any))?.requireCustomerAuth, requireCustomerFeatures: ((undefined as any))?.requireCustomerFeatures, title: ((undefined as any))?.pageTitle ?? ((undefined as any))?.title, titleKey: ((undefined as any))?.pageTitleKey ?? ((undefined as any))?.titleKey, group: ((undefined as any))?.pageGroup ?? ((undefined as any))?.group, groupKey: ((undefined as any))?.pageGroupKey ?? ((undefined as any))?.groupKey, icon: ((undefined as any))?.icon, order: ((undefined as any))?.pageOrder ?? ((undefined as any))?.order, priority: ((undefined as any))?.pagePriority ?? ((undefined as any))?.priority, navHidden: ((undefined as any))?.navHidden, visible: ((undefined as any))?.visible, enabled: ((undefined as any))?.enabled, breadcrumb: ((undefined as any))?.breadcrumb, pageContext: ((undefined as any))?.pageContext, placement: ((undefined as any))?.placement, load: async () => { const mod = await import("@open-mercato/core/modules/products/backend/page"); return (mod.default ?? mod) as any } },
  { moduleId: "custom_app", pattern: "/backend/custom_app", requireAuth: ((undefined as any))?.requireAuth, requireRoles: ((undefined as any))?.requireRoles, requireFeatures: ((undefined as any))?.requireFeatures, requireCustomerAuth: ((undefined as any))?.requireCustomerAuth, requireCustomerFeatures: ((undefined as any))?.requireCustomerFeatures, title: ((undefined as any))?.pageTitle ?? ((undefined as any))?.title, titleKey: ((undefined as any))?.pageTitleKey ?? ((undefined as any))?.titleKey, group: ((undefined as any))?.pageGroup ?? ((undefined as any))?.group, groupKey: ((undefined as any))?.pageGroupKey ?? ((undefined as any))?.groupKey, icon: ((undefined as any))?.icon, order: ((undefined as any))?.pageOrder ?? ((undefined as any))?.order, priority: ((undefined as any))?.pagePriority ?? ((undefined as any))?.priority, navHidden: ((undefined as any))?.navHidden, visible: ((undefined as any))?.visible, enabled: ((undefined as any))?.enabled, breadcrumb: ((undefined as any))?.breadcrumb, pageContext: ((undefined as any))?.pageContext, placement: ((undefined as any))?.placement, load: async () => { const mod = await import("../../src/modules/custom_app/backend/page"); return (mod.default ?? mod) as any } }
]

export default backendRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: bootstrap-registrations.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry

export function runBootstrapRegistrations(): void {

}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: command-interceptors.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { CommandInterceptor } from '@open-mercato/shared/lib/commands/command-interceptor'

import * as CMD_INTERCEPTORS_orders_21 from "@open-mercato/core/modules/orders/commands/interceptors"
type CommandInterceptorEntry = { moduleId: string; interceptors: CommandInterceptor[] }

export const commandInterceptorEntries: CommandInterceptorEntry[] = [
  { moduleId: 'orders', interceptors: ((CMD_INTERCEPTORS_orders_21 as any).interceptors ?? (CMD_INTERCEPTORS_orders_21 as any).default ?? []) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: component-overrides.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentOverride } from '@open-mercato/shared/modules/widgets/component-registry'

import * as COMPONENT_OVERRIDES_orders_17 from "@open-mercato/core/modules/orders/widgets/components"
type ComponentOverrideEntry = { moduleId: string; componentOverrides: ComponentOverride[] }

export const componentOverrideEntries: ComponentOverrideEntry[] = [
  { moduleId: 'orders', componentOverrides: ((COMPONENT_OVERRIDES_orders_17 as any).componentOverrides ?? (COMPONENT_OVERRIDES_orders_17 as any).default ?? []) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: dashboard-widgets.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleDashboardWidgetEntry } from '@open-mercato/shared/modules/registry'

export const dashboardWidgetEntries: ModuleDashboardWidgetEntry[] = [
  { moduleId: "custom_app", key: "custom_app:my-widget:widget", source: "app", loader: () => import("../../src/modules/custom_app/widgets/dashboard/my-widget/widget").then((mod) => mod.default ?? mod) },
  { moduleId: "orders", key: "orders:revenue:widget", source: "package", loader: () => import("@open-mercato/core/modules/orders/widgets/dashboard/revenue/widget").then((mod) => mod.default ?? mod) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: enrichers.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ResponseEnricher } from '@open-mercato/shared/lib/crud/response-enricher'

import * as ENRICHERS_orders_15 from "@open-mercato/core/modules/orders/data/enrichers"
type EnricherEntry = { moduleId: string; enrichers: ResponseEnricher[] }

export const enricherEntries: EnricherEntry[] = [
  { moduleId: 'orders', enrichers: ((ENRICHERS_orders_15 as any).enrichers ?? (ENRICHERS_orders_15 as any).default ?? []) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: events.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { EventModuleConfigBase, EventDefinition } from '@open-mercato/shared/modules/events'

import * as EVENTS_orders_13 from "@open-mercato/core/modules/orders/events"
import * as EVENTS_products_41 from "@open-mercato/core/modules/products/events"
import * as EVENTS_custom_app_50 from "../../src/modules/custom_app/events"
type EventConfigEntry = { moduleId: string; config: EventModuleConfigBase | null }

const entriesRaw: EventConfigEntry[] = [
  { moduleId: 'orders', config: (EVENTS_orders_13.default ?? EVENTS_orders_13.eventsConfig ?? null) as EventModuleConfigBase | null },
  { moduleId: 'products', config: (EVENTS_products_41.default ?? EVENTS_products_41.eventsConfig ?? null) as EventModuleConfigBase | null },
  { moduleId: 'custom_app', config: (EVENTS_custom_app_50.default ?? EVENTS_custom_app_50.eventsConfig ?? null) as EventModuleConfigBase | null }
]
const entries = entriesRaw.filter((e): e is { moduleId: string; config: EventModuleConfigBase } => e.config != null)

export const eventModuleConfigEntries = entries
export const eventModuleConfigs: EventModuleConfigBase[] = entries.map((e) => e.config)
export const allEvents: EventDefinition[] = entries.flatMap((e) => e.config.events)

// Runtime registry for validation
const allDeclaredEventIds = new Set(allEvents.map((e) => e.id))
export function isEventDeclared(eventId: string): boolean {
  return allDeclaredEventIds.has(eventId)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: frontend-middleware.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { PageMiddlewareRegistryEntry, PageRouteMiddleware } from '@open-mercato/shared/modules/middleware/page'

import * as FRONTEND_MIDDLEWARE_orders_22 from "@open-mercato/core/modules/orders/frontend/middleware"
type FrontendMiddlewareEntry = { moduleId: string; middleware: PageRouteMiddleware[] }

const entriesRaw: FrontendMiddlewareEntry[] = [
  { moduleId: 'orders', middleware: ((FRONTEND_MIDDLEWARE_orders_22 as any).middleware ?? (FRONTEND_MIDDLEWARE_orders_22 as any).default ?? []) }
]

export const frontendMiddlewareEntries: PageMiddlewareRegistryEntry[] = entriesRaw
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: frontend-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { FrontendRouteManifestEntry } from '@open-mercato/shared/modules/registry'


export const frontendRoutes: FrontendRouteManifestEntry[] = [
  { moduleId: "orders", pattern: "/", requireAuth: ((undefined as any))?.requireAuth, requireRoles: ((undefined as any))?.requireRoles, requireFeatures: ((undefined as any))?.requireFeatures, requireCustomerAuth: ((undefined as any))?.requireCustomerAuth, requireCustomerFeatures: ((undefined as any))?.requireCustomerFeatures, title: ((undefined as any))?.pageTitle ?? ((undefined as any))?.title, titleKey: ((undefined as any))?.pageTitleKey ?? ((undefined as any))?.titleKey, group: ((undefined as any))?.pageGroup ?? ((undefined as any))?.group, groupKey: ((undefined as any))?.pageGroupKey ?? ((undefined as any))?.groupKey, icon: ((undefined as any))?.icon, order: ((undefined as any))?.pageOrder ?? ((undefined as any))?.order, priority: ((undefined as any))?.pagePriority ?? ((undefined as any))?.priority, navHidden: ((undefined as any))?.navHidden, visible: ((undefined as any))?.visible, enabled: ((undefined as any))?.enabled, breadcrumb: ((undefined as any))?.breadcrumb, pageContext: ((undefined as any))?.pageContext, placement: ((undefined as any))?.placement, load: async () => { const mod = await import("@open-mercato/core/modules/orders/frontend/page"); return (mod.default ?? mod) as any } }
]

export default frontendRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: guards.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MutationGuard } from '@open-mercato/shared/lib/crud/mutation-guard-registry'

import * as GUARDS_orders_20 from "@open-mercato/core/modules/orders/data/guards"
type GuardEntry = { moduleId: string; guards: MutationGuard[] }

export const guardEntries: GuardEntry[] = [
  { moduleId: 'orders', guards: ((GUARDS_orders_20 as any).guards ?? (GUARDS_orders_20 as any).default ?? []) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: inbox-actions.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry — do not edit
import type { InboxActionDefinition } from '@open-mercato/shared/modules/inbox-actions'

import * as INBOX_ACTIONS_orders_19 from "@open-mercato/core/modules/orders/inbox-actions"

type InboxActionConfigEntry = { moduleId: string; actions: InboxActionDefinition[] }

const entriesRaw: InboxActionConfigEntry[] = [
  { moduleId: 'orders', actions: (INBOX_ACTIONS_orders_19.default ?? INBOX_ACTIONS_orders_19.inboxActions ?? []) }
]

const entries = entriesRaw.filter((e): e is InboxActionConfigEntry => Array.isArray(e.actions) && e.actions.length > 0)

export const inboxActionConfigEntries = entries
export const inboxActions: InboxActionDefinition[] = entries.flatMap((e) => e.actions)

const actionTypeMap = new Map(inboxActions.map((a) => [a.type, a]))
export function getInboxAction(type: string): InboxActionDefinition | undefined {
  return actionTypeMap.get(type)
}
export function getRegisteredActionTypes(): string[] {
  return Array.from(actionTypeMap.keys())
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: injection-tables.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleInjectionTable } from '@open-mercato/shared/modules/widgets/injection'
import * as InjTable_orders_36 from "@open-mercato/core/modules/orders/widgets/injection-table"

export const injectionTables: Array<{ moduleId: string; table: ModuleInjectionTable }> = [
  { moduleId: "orders", table: ((InjTable_orders_36.default ?? InjTable_orders_36.injectionTable) as any) || {} }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: injection-widgets.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleInjectionWidgetEntry } from '@open-mercato/shared/modules/registry'

export const injectionWidgetEntries: ModuleInjectionWidgetEntry[] = [
  { moduleId: "orders", key: "orders:sidebar:widget", source: "package", loader: () => import("@open-mercato/core/modules/orders/widgets/injection/sidebar/widget").then((mod) => mod.default ?? mod) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: interceptors.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ApiInterceptor } from '@open-mercato/shared/lib/crud/api-interceptor'

import * as INTERCEPTORS_orders_16 from "@open-mercato/core/modules/orders/api/interceptors"
type InterceptorEntry = { moduleId: string; interceptors: ApiInterceptor[] }

export const interceptorEntries: InterceptorEntry[] = [
  { moduleId: 'orders', interceptors: ((INTERCEPTORS_orders_16 as any).interceptors ?? (INTERCEPTORS_orders_16 as any).default ?? []) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: message-objects.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MessageObjectTypeDefinition } from '@open-mercato/shared/modules/messages/types'

import * as MSG_OBJECTS_orders_11 from "@open-mercato/core/modules/orders/message-objects"
type MessageObjectTypeEntry = { moduleId: string; types: MessageObjectTypeDefinition[] }

const entriesRaw: MessageObjectTypeEntry[] = [
  { moduleId: 'orders', types: ((MSG_OBJECTS_orders_11.default ?? (MSG_OBJECTS_orders_11 as any).messageObjectTypes ?? (MSG_OBJECTS_orders_11 as any).objectTypes ?? (MSG_OBJECTS_orders_11 as any).types ?? []) as MessageObjectTypeDefinition[]) }
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const messageObjectTypeEntries = entriesRaw
export const messageObjectTypes = allTypes

export function getMessageObjectTypes(): MessageObjectTypeDefinition[] {
  return allTypes
}

export function getMessageObjectType(module: string, entityType: string): MessageObjectTypeDefinition | undefined {
  return allTypes.find((entry) => entry.module === module && entry.entityType === entityType)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: message-types.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MessageTypeDefinition } from '@open-mercato/shared/modules/messages/types'

import * as MSG_TYPES_orders_10 from "@open-mercato/core/modules/orders/message-types"
type MessageTypeEntry = { moduleId: string; types: MessageTypeDefinition[] }

const entriesRaw: MessageTypeEntry[] = [
  { moduleId: 'orders', types: ((MSG_TYPES_orders_10.default ?? (MSG_TYPES_orders_10 as any).messageTypes ?? (MSG_TYPES_orders_10 as any).types ?? []) as MessageTypeDefinition[]) }
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const messageTypeEntries = entriesRaw
export const messageTypes = allTypes

export function getMessageTypes(): MessageTypeDefinition[] {
  return allTypes
}

export function getMessageType(type: string): MessageTypeDefinition | undefined {
  return allTypes.find((entry) => entry.type === type)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: messages.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentType } from 'react'
import type {
  MessageTypeDefinition,
  MessageObjectTypeDefinition,
  MessageListItemProps,
  MessageContentProps,
  MessageActionsProps,
  ObjectDetailProps,
  ObjectPreviewProps,
} from '@open-mercato/shared/modules/messages/types'
import { registerMessageObjectTypes } from '@open-mercato/core/modules/messages/lib/message-objects-registry'
import { configureMessageUiComponentRegistry } from '@open-mercato/core/modules/messages/components/utils/typeUiRegistry'

import * as MSG_TYPES_orders_10 from "@open-mercato/core/modules/orders/message-types"

import * as MSG_OBJECTS_orders_11 from "@open-mercato/core/modules/orders/message-objects"
type MessageTypeEntry = { moduleId: string; types: MessageTypeDefinition[] }
type MessageObjectTypeEntry = { moduleId: string; types: MessageObjectTypeDefinition[] }

export type MessageListItemRenderers = Record<string, ComponentType<MessageListItemProps>>
export type MessageContentRenderers = Record<string, ComponentType<MessageContentProps>>
export type MessageActionsRenderers = Record<string, ComponentType<MessageActionsProps>>
export type MessageObjectDetailRenderers = Record<string, ComponentType<ObjectDetailProps>>
export type MessageObjectPreviewRenderers = Record<string, ComponentType<ObjectPreviewProps>>

export type MessageUiComponentRegistry = {
  listItemComponents: MessageListItemRenderers
  contentComponents: MessageContentRenderers
  actionsComponents: MessageActionsRenderers
  objectDetailComponents: MessageObjectDetailRenderers
  objectPreviewComponents: MessageObjectPreviewRenderers
}

const messageTypeEntriesRaw: MessageTypeEntry[] = [
  { moduleId: 'orders', types: ((MSG_TYPES_orders_10.default ?? (MSG_TYPES_orders_10 as any).messageTypes ?? (MSG_TYPES_orders_10 as any).types ?? []) as MessageTypeDefinition[]) }
]
const messageObjectTypeEntriesRaw: MessageObjectTypeEntry[] = [
  { moduleId: 'orders', types: ((MSG_OBJECTS_orders_11.default ?? (MSG_OBJECTS_orders_11 as any).messageObjectTypes ?? (MSG_OBJECTS_orders_11 as any).objectTypes ?? (MSG_OBJECTS_orders_11 as any).types ?? []) as MessageObjectTypeDefinition[]) }
]

const allMessageTypes = messageTypeEntriesRaw.flatMap((entry) => entry.types)
const allMessageObjectTypes = messageObjectTypeEntriesRaw.flatMap((entry) => entry.types)

const listItemComponents: MessageListItemRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.listItemComponent) && Boolean(typeDef.ListItemComponent))
    .map((typeDef) => [typeDef.ui!.listItemComponent!, typeDef.ListItemComponent!]),
)

const contentComponents: MessageContentRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.contentComponent) && Boolean(typeDef.ContentComponent))
    .map((typeDef) => [typeDef.ui!.contentComponent!, typeDef.ContentComponent!]),
)

const actionsComponents: MessageActionsRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.actionsComponent) && Boolean(typeDef.ActionsComponent))
    .map((typeDef) => [typeDef.ui!.actionsComponent!, typeDef.ActionsComponent!]),
)

const objectDetailComponents: MessageObjectDetailRenderers = Object.fromEntries(
  allMessageObjectTypes
    .filter((typeDef) => Boolean(typeDef.DetailComponent))
    .map((typeDef) => [\`\${typeDef.module}:\${typeDef.entityType}\`, typeDef.DetailComponent!]),
)

const objectPreviewComponents: MessageObjectPreviewRenderers = Object.fromEntries(
  allMessageObjectTypes
    .filter((typeDef) => Boolean(typeDef.PreviewComponent))
    .map((typeDef) => [\`\${typeDef.module}:\${typeDef.entityType}\`, typeDef.PreviewComponent!]),
)

const registry: MessageUiComponentRegistry = {
  listItemComponents,
  contentComponents,
  actionsComponents,
  objectDetailComponents,
  objectPreviewComponents,
}

export const messageClientTypeEntries = messageTypeEntriesRaw
export const messageClientObjectTypeEntries = messageObjectTypeEntriesRaw
export const messageUiComponentRegistry = registry

export function getMessageUiComponentRegistry(): MessageUiComponentRegistry {
  return registry
}

// Side-effects: register all message object types and configure the UI component registry on import.
for (const entry of messageObjectTypeEntriesRaw) {
  registerMessageObjectTypes(entry.types)
}
configureMessageUiComponentRegistry(registry)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: modules.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'
import * as I0_orders from "@open-mercato/core/modules/orders/index"
import C1_orders_index, * as CM2_orders_index from "@open-mercato/core/modules/orders/frontend/page"
import * as X_orders_5 from "@open-mercato/core/modules/orders/data/extensions"
import * as ACL_orders_6 from "@open-mercato/core/modules/orders/acl"
import * as CE_orders_7 from "@open-mercato/core/modules/orders/ce"
import * as EVENTS_orders_13 from "@open-mercato/core/modules/orders/events"
import * as ANALYTICS_orders_14 from "@open-mercato/core/modules/orders/analytics"
import * as TRANS_FIELDS_orders_18 from "@open-mercato/core/modules/orders/translations"
import * as SETUP_orders_24 from "@open-mercato/core/modules/orders/setup"
import * as BM28_orders_index from "@open-mercato/core/modules/orders/backend/page.meta"
import B25_orders_index from "@open-mercato/core/modules/orders/backend/page"
import B30_orders_details__id_, * as BM31_orders_details__id_ from "@open-mercato/core/modules/orders/backend/details/[id]/page"
import * as R34_orders_orders from "@open-mercato/core/modules/orders/api/orders/route"
import T_orders_en_C from "@open-mercato/core/modules/orders/i18n/en.json"
import T_orders_pl_C from "@open-mercato/core/modules/orders/i18n/pl.json"
import * as InjTable_orders_36 from "@open-mercato/core/modules/orders/widgets/injection-table"
import * as I37_products from "@open-mercato/core/modules/products/index"
import * as X_products_38 from "@open-mercato/core/modules/products/data/extensions"
import * as ACL_products_39 from "@open-mercato/core/modules/products/acl"
import * as EVENTS_products_41 from "@open-mercato/core/modules/products/events"
import * as TRANS_FIELDS_products_42 from "@open-mercato/core/modules/products/translations"
import B43_products_index, * as BM44_products_index from "@open-mercato/core/modules/products/backend/page"
import * as R47_products_products from "@open-mercato/core/modules/products/api/products/route"
import * as I48_custom_app from "../../src/modules/custom_app/index"
import * as ACL_custom_app_49 from "../../src/modules/custom_app/acl"
import * as EVENTS_custom_app_50 from "../../src/modules/custom_app/events"
import B51_custom_app_index, * as BM52_custom_app_index from "../../src/modules/custom_app/backend/page"

export const modules: Module[] = [
  {
      id: "orders",
      info: I0_orders.metadata,
      frontendRoutes: [{ pattern: "/", requireAuth: ((CM2_orders_index as any).metadata)?.requireAuth, requireRoles: ((CM2_orders_index as any).metadata)?.requireRoles, requireFeatures: ((CM2_orders_index as any).metadata)?.requireFeatures, requireCustomerAuth: ((CM2_orders_index as any).metadata)?.requireCustomerAuth, requireCustomerFeatures: ((CM2_orders_index as any).metadata)?.requireCustomerFeatures, title: ((CM2_orders_index as any).metadata)?.pageTitle ?? ((CM2_orders_index as any).metadata)?.title, titleKey: ((CM2_orders_index as any).metadata)?.pageTitleKey ?? ((CM2_orders_index as any).metadata)?.titleKey, group: ((CM2_orders_index as any).metadata)?.pageGroup ?? ((CM2_orders_index as any).metadata)?.group, groupKey: ((CM2_orders_index as any).metadata)?.pageGroupKey ?? ((CM2_orders_index as any).metadata)?.groupKey, icon: ((CM2_orders_index as any).metadata)?.icon, order: ((CM2_orders_index as any).metadata)?.pageOrder ?? ((CM2_orders_index as any).metadata)?.order, priority: ((CM2_orders_index as any).metadata)?.pagePriority ?? ((CM2_orders_index as any).metadata)?.priority, navHidden: ((CM2_orders_index as any).metadata)?.navHidden, visible: ((CM2_orders_index as any).metadata)?.visible, enabled: ((CM2_orders_index as any).metadata)?.enabled, breadcrumb: ((CM2_orders_index as any).metadata)?.breadcrumb, pageContext: ((CM2_orders_index as any).metadata)?.pageContext, placement: ((CM2_orders_index as any).metadata)?.placement, Component: C1_orders_index }],
      backendRoutes: [{ pattern: "/backend/orders", requireAuth: ((BM28_orders_index.metadata as any))?.requireAuth, requireRoles: ((BM28_orders_index.metadata as any))?.requireRoles, requireFeatures: ((BM28_orders_index.metadata as any))?.requireFeatures, requireCustomerAuth: ((BM28_orders_index.metadata as any))?.requireCustomerAuth, requireCustomerFeatures: ((BM28_orders_index.metadata as any))?.requireCustomerFeatures, title: ((BM28_orders_index.metadata as any))?.pageTitle ?? ((BM28_orders_index.metadata as any))?.title, titleKey: ((BM28_orders_index.metadata as any))?.pageTitleKey ?? ((BM28_orders_index.metadata as any))?.titleKey, group: ((BM28_orders_index.metadata as any))?.pageGroup ?? ((BM28_orders_index.metadata as any))?.group, groupKey: ((BM28_orders_index.metadata as any))?.pageGroupKey ?? ((BM28_orders_index.metadata as any))?.groupKey, icon: ((BM28_orders_index.metadata as any))?.icon, order: ((BM28_orders_index.metadata as any))?.pageOrder ?? ((BM28_orders_index.metadata as any))?.order, priority: ((BM28_orders_index.metadata as any))?.pagePriority ?? ((BM28_orders_index.metadata as any))?.priority, navHidden: ((BM28_orders_index.metadata as any))?.navHidden, visible: ((BM28_orders_index.metadata as any))?.visible, enabled: ((BM28_orders_index.metadata as any))?.enabled, breadcrumb: ((BM28_orders_index.metadata as any))?.breadcrumb, pageContext: ((BM28_orders_index.metadata as any))?.pageContext, placement: ((BM28_orders_index.metadata as any))?.placement, Component: B25_orders_index }, { pattern: "/backend/details/[id]", requireAuth: ((BM31_orders_details__id_ as any).metadata)?.requireAuth, requireRoles: ((BM31_orders_details__id_ as any).metadata)?.requireRoles, requireFeatures: ((BM31_orders_details__id_ as any).metadata)?.requireFeatures, requireCustomerAuth: ((BM31_orders_details__id_ as any).metadata)?.requireCustomerAuth, requireCustomerFeatures: ((BM31_orders_details__id_ as any).metadata)?.requireCustomerFeatures, title: ((BM31_orders_details__id_ as any).metadata)?.pageTitle ?? ((BM31_orders_details__id_ as any).metadata)?.title, titleKey: ((BM31_orders_details__id_ as any).metadata)?.pageTitleKey ?? ((BM31_orders_details__id_ as any).metadata)?.titleKey, group: ((BM31_orders_details__id_ as any).metadata)?.pageGroup ?? ((BM31_orders_details__id_ as any).metadata)?.group, groupKey: ((BM31_orders_details__id_ as any).metadata)?.pageGroupKey ?? ((BM31_orders_details__id_ as any).metadata)?.groupKey, icon: ((BM31_orders_details__id_ as any).metadata)?.icon, order: ((BM31_orders_details__id_ as any).metadata)?.pageOrder ?? ((BM31_orders_details__id_ as any).metadata)?.order, priority: ((BM31_orders_details__id_ as any).metadata)?.pagePriority ?? ((BM31_orders_details__id_ as any).metadata)?.priority, navHidden: ((BM31_orders_details__id_ as any).metadata)?.navHidden, visible: ((BM31_orders_details__id_ as any).metadata)?.visible, enabled: ((BM31_orders_details__id_ as any).metadata)?.enabled, breadcrumb: ((BM31_orders_details__id_ as any).metadata)?.breadcrumb, pageContext: ((BM31_orders_details__id_ as any).metadata)?.pageContext, placement: ((BM31_orders_details__id_ as any).metadata)?.placement, Component: B30_orders_details__id_ }],
      apis: [{ path: ((R34_orders_orders as any).metadata?.path ?? "/orders/orders"), metadata: (R34_orders_orders as any).metadata, handlers: R34_orders_orders as any, docs: ((R34_orders_orders as any).openApi as any) }],
      
      translations: { 'en': T_orders_en_C as unknown as Record<string,string>, 'pl': T_orders_pl_C as unknown as Record<string,string> },
      subscribers: [{ id: "orders:on-created", event: "orders.order.created", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-created"), "orders:on-created") }, { id: "orders:on-payment", event: "payments.payment.completed", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-payment"), "orders:on-payment") }],
      workers: [{ id: "orders:workers:sync-job", queue: "orders.sync", concurrency: 2, handler: createLazyModuleWorker(() => import("@open-mercato/core/modules/orders/workers/sync-job"), "orders:workers:sync-job") }],
      entityExtensions: ((X_orders_5.default ?? X_orders_5.extensions) as import('@open-mercato/shared/modules/entities').EntityExtension[]) || [],
      customFieldSets: [...((( CE_orders_7.default ?? CE_orders_7.entities) as any) || []).filter((e: any) => Array.isArray(e.fields) && e.fields.length).map((e: any) => ({ entity: e.id, fields: e.fields, source: "orders" }))],
      features: ((ACL_orders_6.default ?? ACL_orders_6.features) as any) || [],
      customEntities: ((CE_orders_7.default ?? CE_orders_7.entities) as any) || [],
      dashboardWidgets: [{ moduleId: "orders", key: "orders:revenue:widget", source: "package", loader: () => import("@open-mercato/core/modules/orders/widgets/dashboard/revenue/widget").then((mod) => mod.default ?? mod) }],
      setup: (SETUP_orders_24.default ?? SETUP_orders_24.setup) || undefined,
      
      
    },
  {
      id: "products",
      info: I37_products.metadata,
      
      backendRoutes: [{ pattern: "/backend/products", requireAuth: ((BM44_products_index as any).metadata)?.requireAuth, requireRoles: ((BM44_products_index as any).metadata)?.requireRoles, requireFeatures: ((BM44_products_index as any).metadata)?.requireFeatures, requireCustomerAuth: ((BM44_products_index as any).metadata)?.requireCustomerAuth, requireCustomerFeatures: ((BM44_products_index as any).metadata)?.requireCustomerFeatures, title: ((BM44_products_index as any).metadata)?.pageTitle ?? ((BM44_products_index as any).metadata)?.title, titleKey: ((BM44_products_index as any).metadata)?.pageTitleKey ?? ((BM44_products_index as any).metadata)?.titleKey, group: ((BM44_products_index as any).metadata)?.pageGroup ?? ((BM44_products_index as any).metadata)?.group, groupKey: ((BM44_products_index as any).metadata)?.pageGroupKey ?? ((BM44_products_index as any).metadata)?.groupKey, icon: ((BM44_products_index as any).metadata)?.icon, order: ((BM44_products_index as any).metadata)?.pageOrder ?? ((BM44_products_index as any).metadata)?.order, priority: ((BM44_products_index as any).metadata)?.pagePriority ?? ((BM44_products_index as any).metadata)?.priority, navHidden: ((BM44_products_index as any).metadata)?.navHidden, visible: ((BM44_products_index as any).metadata)?.visible, enabled: ((BM44_products_index as any).metadata)?.enabled, breadcrumb: ((BM44_products_index as any).metadata)?.breadcrumb, pageContext: ((BM44_products_index as any).metadata)?.pageContext, placement: ((BM44_products_index as any).metadata)?.placement, Component: B43_products_index }],
      apis: [{ path: ((R47_products_products as any).metadata?.path ?? "/products/products"), metadata: (R47_products_products as any).metadata, handlers: R47_products_products as any, docs: ((R47_products_products as any).openApi as any) }],
      
      
      
      
      entityExtensions: ((X_products_38.default ?? X_products_38.extensions) as import('@open-mercato/shared/modules/entities').EntityExtension[]) || [],
      customFieldSets: [],
      features: ((ACL_products_39.default ?? ACL_products_39.features) as any) || [],
      
      
      
      
      
    },
  {
      id: "custom_app",
      info: I48_custom_app.metadata,
      
      backendRoutes: [{ pattern: "/backend/custom_app", requireAuth: ((BM52_custom_app_index as any).metadata)?.requireAuth, requireRoles: ((BM52_custom_app_index as any).metadata)?.requireRoles, requireFeatures: ((BM52_custom_app_index as any).metadata)?.requireFeatures, requireCustomerAuth: ((BM52_custom_app_index as any).metadata)?.requireCustomerAuth, requireCustomerFeatures: ((BM52_custom_app_index as any).metadata)?.requireCustomerFeatures, title: ((BM52_custom_app_index as any).metadata)?.pageTitle ?? ((BM52_custom_app_index as any).metadata)?.title, titleKey: ((BM52_custom_app_index as any).metadata)?.pageTitleKey ?? ((BM52_custom_app_index as any).metadata)?.titleKey, group: ((BM52_custom_app_index as any).metadata)?.pageGroup ?? ((BM52_custom_app_index as any).metadata)?.group, groupKey: ((BM52_custom_app_index as any).metadata)?.pageGroupKey ?? ((BM52_custom_app_index as any).metadata)?.groupKey, icon: ((BM52_custom_app_index as any).metadata)?.icon, order: ((BM52_custom_app_index as any).metadata)?.pageOrder ?? ((BM52_custom_app_index as any).metadata)?.order, priority: ((BM52_custom_app_index as any).metadata)?.pagePriority ?? ((BM52_custom_app_index as any).metadata)?.priority, navHidden: ((BM52_custom_app_index as any).metadata)?.navHidden, visible: ((BM52_custom_app_index as any).metadata)?.visible, enabled: ((BM52_custom_app_index as any).metadata)?.enabled, breadcrumb: ((BM52_custom_app_index as any).metadata)?.breadcrumb, pageContext: ((BM52_custom_app_index as any).metadata)?.pageContext, placement: ((BM52_custom_app_index as any).metadata)?.placement, Component: B51_custom_app_index }],
      
      
      
      subscribers: [{ id: "custom_app:on-action", event: "custom_app.action.fired", persistent: undefined, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("../../src/modules/custom_app/subscribers/on-action"), "custom_app:on-action") }],
      
      
      customFieldSets: [],
      features: ((ACL_custom_app_49.default ?? ACL_custom_app_49.features) as any) || [],
      
      dashboardWidgets: [{ moduleId: "custom_app", key: "custom_app:my-widget:widget", source: "app", loader: () => import("../../src/modules/custom_app/widgets/dashboard/my-widget/widget").then((mod) => mod.default ?? mod) }],
      
      
      
    }
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: modules.runtime.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { createElement } from 'react'
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'
import * as I0_orders from "@open-mercato/core/modules/orders/index"
import * as MRuntime3_orders_index from "@open-mercato/core/modules/orders/frontend/page"
import * as X_orders_5 from "@open-mercato/core/modules/orders/data/extensions"
import * as ACL_orders_6 from "@open-mercato/core/modules/orders/acl"
import * as CE_orders_7 from "@open-mercato/core/modules/orders/ce"
import * as SETUP_orders_24 from "@open-mercato/core/modules/orders/setup"
import * as BMRuntime27_orders_index from "@open-mercato/core/modules/orders/backend/page.meta"
import * as BMRuntime32_orders_details__id_ from "@open-mercato/core/modules/orders/backend/details/[id]/page"
import T_orders_en_C from "@open-mercato/core/modules/orders/i18n/en.json"
import T_orders_pl_C from "@open-mercato/core/modules/orders/i18n/pl.json"
import * as I37_products from "@open-mercato/core/modules/products/index"
import * as X_products_38 from "@open-mercato/core/modules/products/data/extensions"
import * as ACL_products_39 from "@open-mercato/core/modules/products/acl"
import * as BMRuntime45_products_index from "@open-mercato/core/modules/products/backend/page"
import * as I48_custom_app from "../../src/modules/custom_app/index"
import * as ACL_custom_app_49 from "../../src/modules/custom_app/acl"
import * as BMRuntime53_custom_app_index from "../../src/modules/custom_app/backend/page"

export const modules: Module[] = [
  {
      id: "orders",
      info: I0_orders.metadata,
      frontendRoutes: [{ pattern: "/", requireAuth: ((((MRuntime3_orders_index as any).metadata) as any))?.requireAuth, requireRoles: ((((MRuntime3_orders_index as any).metadata) as any))?.requireRoles, requireFeatures: ((((MRuntime3_orders_index as any).metadata) as any))?.requireFeatures, requireCustomerAuth: ((((MRuntime3_orders_index as any).metadata) as any))?.requireCustomerAuth, requireCustomerFeatures: ((((MRuntime3_orders_index as any).metadata) as any))?.requireCustomerFeatures, title: ((((MRuntime3_orders_index as any).metadata) as any))?.pageTitle ?? ((((MRuntime3_orders_index as any).metadata) as any))?.title, titleKey: ((((MRuntime3_orders_index as any).metadata) as any))?.pageTitleKey ?? ((((MRuntime3_orders_index as any).metadata) as any))?.titleKey, group: ((((MRuntime3_orders_index as any).metadata) as any))?.pageGroup ?? ((((MRuntime3_orders_index as any).metadata) as any))?.group, groupKey: ((((MRuntime3_orders_index as any).metadata) as any))?.pageGroupKey ?? ((((MRuntime3_orders_index as any).metadata) as any))?.groupKey, icon: ((((MRuntime3_orders_index as any).metadata) as any))?.icon, order: ((((MRuntime3_orders_index as any).metadata) as any))?.pageOrder ?? ((((MRuntime3_orders_index as any).metadata) as any))?.order, priority: ((((MRuntime3_orders_index as any).metadata) as any))?.pagePriority ?? ((((MRuntime3_orders_index as any).metadata) as any))?.priority, navHidden: ((((MRuntime3_orders_index as any).metadata) as any))?.navHidden, visible: ((((MRuntime3_orders_index as any).metadata) as any))?.visible, enabled: ((((MRuntime3_orders_index as any).metadata) as any))?.enabled, breadcrumb: ((((MRuntime3_orders_index as any).metadata) as any))?.breadcrumb, pageContext: ((((MRuntime3_orders_index as any).metadata) as any))?.pageContext, placement: ((((MRuntime3_orders_index as any).metadata) as any))?.placement, Component: async (props: any) => { const mod = await import("@open-mercato/core/modules/orders/frontend/page"); const Component = (mod.default ?? mod) as any; return createElement(Component, props) } }],
      backendRoutes: [{ pattern: "/backend/orders", requireAuth: ((((BMRuntime27_orders_index as any).metadata) as any))?.requireAuth, requireRoles: ((((BMRuntime27_orders_index as any).metadata) as any))?.requireRoles, requireFeatures: ((((BMRuntime27_orders_index as any).metadata) as any))?.requireFeatures, requireCustomerAuth: ((((BMRuntime27_orders_index as any).metadata) as any))?.requireCustomerAuth, requireCustomerFeatures: ((((BMRuntime27_orders_index as any).metadata) as any))?.requireCustomerFeatures, title: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageTitle ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.title, titleKey: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageTitleKey ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.titleKey, group: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageGroup ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.group, groupKey: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageGroupKey ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.groupKey, icon: ((((BMRuntime27_orders_index as any).metadata) as any))?.icon, order: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageOrder ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.order, priority: ((((BMRuntime27_orders_index as any).metadata) as any))?.pagePriority ?? ((((BMRuntime27_orders_index as any).metadata) as any))?.priority, navHidden: ((((BMRuntime27_orders_index as any).metadata) as any))?.navHidden, visible: ((((BMRuntime27_orders_index as any).metadata) as any))?.visible, enabled: ((((BMRuntime27_orders_index as any).metadata) as any))?.enabled, breadcrumb: ((((BMRuntime27_orders_index as any).metadata) as any))?.breadcrumb, pageContext: ((((BMRuntime27_orders_index as any).metadata) as any))?.pageContext, placement: ((((BMRuntime27_orders_index as any).metadata) as any))?.placement, Component: async (props: any) => { const mod = await import("@open-mercato/core/modules/orders/backend/page"); const Component = (mod.default ?? mod) as any; return createElement(Component, props) } }, { pattern: "/backend/details/[id]", requireAuth: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.requireAuth, requireRoles: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.requireRoles, requireFeatures: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.requireFeatures, requireCustomerAuth: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.requireCustomerAuth, requireCustomerFeatures: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.requireCustomerFeatures, title: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageTitle ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.title, titleKey: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageTitleKey ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.titleKey, group: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageGroup ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.group, groupKey: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageGroupKey ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.groupKey, icon: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.icon, order: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageOrder ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.order, priority: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pagePriority ?? ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.priority, navHidden: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.navHidden, visible: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.visible, enabled: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.enabled, breadcrumb: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.breadcrumb, pageContext: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.pageContext, placement: ((((BMRuntime32_orders_details__id_ as any).metadata) as any))?.placement, Component: async (props: any) => { const mod = await import("@open-mercato/core/modules/orders/backend/details/[id]/page"); const Component = (mod.default ?? mod) as any; return createElement(Component, props) } }],
      apis: [{ path: "/orders", metadata: undefined, handlers: { GET: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/orders/api/orders/route"); return (mod as any).GET(req, ctx) }, POST: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/orders/api/orders/route"); return (mod as any).POST(req, ctx) } } }],
      translations: { 'en': T_orders_en_C as unknown as Record<string,string>, 'pl': T_orders_pl_C as unknown as Record<string,string> },
      subscribers: [{ id: "orders:on-created", event: "orders.order.created", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-created"), "orders:on-created") }, { id: "orders:on-payment", event: "payments.payment.completed", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-payment"), "orders:on-payment") }],
      workers: [{ id: "orders:workers:sync-job", queue: "orders.sync", concurrency: 2, handler: createLazyModuleWorker(() => import("@open-mercato/core/modules/orders/workers/sync-job"), "orders:workers:sync-job") }],
      entityExtensions: ((X_orders_5.default ?? X_orders_5.extensions) as import('@open-mercato/shared/modules/entities').EntityExtension[]) || [],
      customFieldSets: [...((( CE_orders_7.default ?? CE_orders_7.entities) as any) || []).filter((e: any) => Array.isArray(e.fields) && e.fields.length).map((e: any) => ({ entity: e.id, fields: e.fields, source: "orders" }))],
      features: ((ACL_orders_6.default ?? ACL_orders_6.features) as any) || [],
      customEntities: ((CE_orders_7.default ?? CE_orders_7.entities) as any) || [],
      setup: (SETUP_orders_24.default ?? SETUP_orders_24.setup) || undefined,
      
      
    },
  {
      id: "products",
      info: I37_products.metadata,
      
      backendRoutes: [{ pattern: "/backend/products", requireAuth: ((((BMRuntime45_products_index as any).metadata) as any))?.requireAuth, requireRoles: ((((BMRuntime45_products_index as any).metadata) as any))?.requireRoles, requireFeatures: ((((BMRuntime45_products_index as any).metadata) as any))?.requireFeatures, requireCustomerAuth: ((((BMRuntime45_products_index as any).metadata) as any))?.requireCustomerAuth, requireCustomerFeatures: ((((BMRuntime45_products_index as any).metadata) as any))?.requireCustomerFeatures, title: ((((BMRuntime45_products_index as any).metadata) as any))?.pageTitle ?? ((((BMRuntime45_products_index as any).metadata) as any))?.title, titleKey: ((((BMRuntime45_products_index as any).metadata) as any))?.pageTitleKey ?? ((((BMRuntime45_products_index as any).metadata) as any))?.titleKey, group: ((((BMRuntime45_products_index as any).metadata) as any))?.pageGroup ?? ((((BMRuntime45_products_index as any).metadata) as any))?.group, groupKey: ((((BMRuntime45_products_index as any).metadata) as any))?.pageGroupKey ?? ((((BMRuntime45_products_index as any).metadata) as any))?.groupKey, icon: ((((BMRuntime45_products_index as any).metadata) as any))?.icon, order: ((((BMRuntime45_products_index as any).metadata) as any))?.pageOrder ?? ((((BMRuntime45_products_index as any).metadata) as any))?.order, priority: ((((BMRuntime45_products_index as any).metadata) as any))?.pagePriority ?? ((((BMRuntime45_products_index as any).metadata) as any))?.priority, navHidden: ((((BMRuntime45_products_index as any).metadata) as any))?.navHidden, visible: ((((BMRuntime45_products_index as any).metadata) as any))?.visible, enabled: ((((BMRuntime45_products_index as any).metadata) as any))?.enabled, breadcrumb: ((((BMRuntime45_products_index as any).metadata) as any))?.breadcrumb, pageContext: ((((BMRuntime45_products_index as any).metadata) as any))?.pageContext, placement: ((((BMRuntime45_products_index as any).metadata) as any))?.placement, Component: async (props: any) => { const mod = await import("@open-mercato/core/modules/products/backend/page"); const Component = (mod.default ?? mod) as any; return createElement(Component, props) } }],
      apis: [{ path: "/products", metadata: undefined, handlers: { GET: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/products/api/products/route"); return (mod as any).GET(req, ctx) }, POST: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/products/api/products/route"); return (mod as any).POST(req, ctx) }, PUT: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/products/api/products/route"); return (mod as any).PUT(req, ctx) }, DELETE: async (req: Request, ctx?: any) => { const mod = await import("@open-mercato/core/modules/products/api/products/route"); return (mod as any).DELETE(req, ctx) } } }],
      
      
      
      entityExtensions: ((X_products_38.default ?? X_products_38.extensions) as import('@open-mercato/shared/modules/entities').EntityExtension[]) || [],
      customFieldSets: [],
      features: ((ACL_products_39.default ?? ACL_products_39.features) as any) || [],
      
      
      
      
    },
  {
      id: "custom_app",
      info: I48_custom_app.metadata,
      
      backendRoutes: [{ pattern: "/backend/custom_app", requireAuth: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.requireAuth, requireRoles: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.requireRoles, requireFeatures: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.requireFeatures, requireCustomerAuth: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.requireCustomerAuth, requireCustomerFeatures: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.requireCustomerFeatures, title: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageTitle ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.title, titleKey: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageTitleKey ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.titleKey, group: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageGroup ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.group, groupKey: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageGroupKey ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.groupKey, icon: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.icon, order: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageOrder ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.order, priority: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pagePriority ?? ((((BMRuntime53_custom_app_index as any).metadata) as any))?.priority, navHidden: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.navHidden, visible: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.visible, enabled: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.enabled, breadcrumb: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.breadcrumb, pageContext: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.pageContext, placement: ((((BMRuntime53_custom_app_index as any).metadata) as any))?.placement, Component: async (props: any) => { const mod = await import("../../src/modules/custom_app/backend/page"); const Component = (mod.default ?? mod) as any; return createElement(Component, props) } }],
      
      
      subscribers: [{ id: "custom_app:on-action", event: "custom_app.action.fired", persistent: undefined, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("../../src/modules/custom_app/subscribers/on-action"), "custom_app:on-action") }],
      
      
      customFieldSets: [],
      features: ((ACL_custom_app_49.default ?? ACL_custom_app_49.features) as any) || [],
      
      
      
      
    }
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: notification-handlers.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { NotificationHandler } from '@open-mercato/shared/modules/notifications/handler'

import * as NOTIF_HANDLERS_orders_9 from "@open-mercato/core/modules/orders/notifications.handlers"
type NotificationHandlerEntry = { moduleId: string; handlers: NotificationHandler[] }

export const notificationHandlerEntries: NotificationHandlerEntry[] = [
  { moduleId: 'orders', handlers: ((NOTIF_HANDLERS_orders_9.default ?? NOTIF_HANDLERS_orders_9.notificationHandlers ?? []) as NotificationHandler[]) }
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: notifications.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentType } from 'react'
import type { NotificationTypeDefinition, NotificationRendererProps } from '@open-mercato/shared/modules/notifications/types'

type NotificationTypeEntry = { moduleId: string; types: NotificationTypeDefinition[] }
export type NotificationRenderers = Record<string, ComponentType<NotificationRendererProps>>

const entriesRaw: NotificationTypeEntry[] = [
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)
const renderers: NotificationRenderers = Object.fromEntries(
  allTypes
    .filter((typeDef) => Boolean(typeDef.Renderer))
    .map((typeDef) => [typeDef.type, typeDef.Renderer!]),
)

export const notificationClientTypeEntries = entriesRaw
export const notificationClientTypes = allTypes
export const notificationRenderers = renderers

export function getNotificationRenderers(): NotificationRenderers {
  return renderers
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: notifications.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { NotificationTypeDefinition } from '@open-mercato/shared/modules/notifications/types'

import * as NOTIF_orders_8 from "@open-mercato/core/modules/orders/notifications"
import * as NOTIF_products_40 from "@open-mercato/core/modules/products/notifications"
type NotificationTypeEntry = { moduleId: string; types: NotificationTypeDefinition[] }

const entriesRaw: NotificationTypeEntry[] = [
  { moduleId: 'orders', types: ((NOTIF_orders_8.default ?? NOTIF_orders_8.notificationTypes ?? (NOTIF_orders_8 as any).types ?? []) as NotificationTypeDefinition[]) },
  { moduleId: 'products', types: ((NOTIF_products_40.default ?? NOTIF_products_40.notificationTypes ?? (NOTIF_products_40 as any).types ?? []) as NotificationTypeDefinition[]) }
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const notificationTypeEntries = entriesRaw
export const notificationTypes = allTypes

export function getNotificationTypes(): NotificationTypeDefinition[] {
  return allTypes
}

export function getNotificationType(type: string): NotificationTypeDefinition | undefined {
  return allTypes.find((t) => t.type === type)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: payments.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry

export const paymentGatewayClientModuleCount = 0
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: search.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { SearchModuleConfig } from '@open-mercato/shared/modules/search'

type SearchConfigEntry = { moduleId: string; config: SearchModuleConfig | null }

const entriesRaw: SearchConfigEntry[] = [
]
const entries = entriesRaw.filter((entry): entry is { moduleId: string; config: SearchModuleConfig } => entry.config != null)

export const searchModuleConfigEntries = entries
export const searchModuleConfigs: SearchModuleConfig[] = entries.map((entry) => entry.config)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output for all registry files with realistic modules: translations-fields.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { registerTranslatableFields } from '@open-mercato/shared/lib/localization/translatable-fields'

import * as TRANS_FIELDS_orders_18 from "@open-mercato/core/modules/orders/translations"
import * as TRANS_FIELDS_products_42 from "@open-mercato/core/modules/products/translations"
type TransFieldsEntry = { moduleId: string; fields: Record<string, string[]> }

const entries: TransFieldsEntry[] = [
  { moduleId: 'orders', fields: (TRANS_FIELDS_orders_18.default ?? TRANS_FIELDS_orders_18.translatableFields ?? {}) as Record<string, string[]> },
  { moduleId: 'products', fields: (TRANS_FIELDS_products_42.default ?? TRANS_FIELDS_products_42.translatableFields ?? {}) as Record<string, string[]> }
]

const allFields: Record<string, string[]> = {}
for (const entry of entries) {
  for (const [key, value] of Object.entries(entry.fields)) {
    allFields[key] = value
  }
}

export const translatableFieldEntries = entries
export const allTranslatableFields = allFields
export const allTranslatableEntityTypes = Object.keys(allFields)

// Auto-register on import (side-effect)
registerTranslatableFields(allFields)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/ai-tools.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry

type AiToolConfigEntry = { moduleId: string; tools: unknown[] }

const aiToolConfigEntriesRaw: AiToolConfigEntry[] = [
]

export const aiToolConfigEntries: AiToolConfigEntry[] = aiToolConfigEntriesRaw.filter(
  (entry): entry is AiToolConfigEntry => Array.isArray(entry.tools) && entry.tools.length > 0,
)

export const allAiTools = aiToolConfigEntries.flatMap(e => e.tools)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/analytics.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { AnalyticsModuleConfig } from '@open-mercato/shared/modules/analytics'

type AnalyticsConfigEntry = { moduleId: string; config: AnalyticsModuleConfig | null }

const entriesRaw: AnalyticsConfigEntry[] = [
]
const entries = entriesRaw.filter((entry): entry is { moduleId: string; config: AnalyticsModuleConfig } => entry.config != null)

export const analyticsModuleConfigEntries = entries
export const analyticsModuleConfigs: AnalyticsModuleConfig[] = entries.map((entry) => entry.config)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/api-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ApiRouteManifestEntry } from '@open-mercato/shared/modules/registry'

export const apiRoutes: ApiRouteManifestEntry[] = [
  
]

export default apiRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/backend-middleware.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { PageMiddlewareRegistryEntry, PageRouteMiddleware } from '@open-mercato/shared/modules/middleware/page'

type BackendMiddlewareEntry = { moduleId: string; middleware: PageRouteMiddleware[] }

const entriesRaw: BackendMiddlewareEntry[] = [
]

export const backendMiddlewareEntries: PageMiddlewareRegistryEntry[] = entriesRaw
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/backend-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { BackendRouteManifestEntry } from '@open-mercato/shared/modules/registry'


export const backendRoutes: BackendRouteManifestEntry[] = [
  
]

export default backendRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/bootstrap-registrations.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry

export function runBootstrapRegistrations(): void {

}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/command-interceptors.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { CommandInterceptor } from '@open-mercato/shared/lib/commands/command-interceptor'

type CommandInterceptorEntry = { moduleId: string; interceptors: CommandInterceptor[] }

export const commandInterceptorEntries: CommandInterceptorEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/component-overrides.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentOverride } from '@open-mercato/shared/modules/widgets/component-registry'

type ComponentOverrideEntry = { moduleId: string; componentOverrides: ComponentOverride[] }

export const componentOverrideEntries: ComponentOverrideEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/dashboard-widgets.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleDashboardWidgetEntry } from '@open-mercato/shared/modules/registry'

export const dashboardWidgetEntries: ModuleDashboardWidgetEntry[] = [

]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/enrichers.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ResponseEnricher } from '@open-mercato/shared/lib/crud/response-enricher'

type EnricherEntry = { moduleId: string; enrichers: ResponseEnricher[] }

export const enricherEntries: EnricherEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/events.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { EventModuleConfigBase, EventDefinition } from '@open-mercato/shared/modules/events'

type EventConfigEntry = { moduleId: string; config: EventModuleConfigBase | null }

const entriesRaw: EventConfigEntry[] = [
]
const entries = entriesRaw.filter((e): e is { moduleId: string; config: EventModuleConfigBase } => e.config != null)

export const eventModuleConfigEntries = entries
export const eventModuleConfigs: EventModuleConfigBase[] = entries.map((e) => e.config)
export const allEvents: EventDefinition[] = entries.flatMap((e) => e.config.events)

// Runtime registry for validation
const allDeclaredEventIds = new Set(allEvents.map((e) => e.id))
export function isEventDeclared(eventId: string): boolean {
  return allDeclaredEventIds.has(eventId)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/frontend-middleware.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { PageMiddlewareRegistryEntry, PageRouteMiddleware } from '@open-mercato/shared/modules/middleware/page'

type FrontendMiddlewareEntry = { moduleId: string; middleware: PageRouteMiddleware[] }

const entriesRaw: FrontendMiddlewareEntry[] = [
]

export const frontendMiddlewareEntries: PageMiddlewareRegistryEntry[] = entriesRaw
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/frontend-routes.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { FrontendRouteManifestEntry } from '@open-mercato/shared/modules/registry'


export const frontendRoutes: FrontendRouteManifestEntry[] = [
  
]

export default frontendRoutes
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/guards.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MutationGuard } from '@open-mercato/shared/lib/crud/mutation-guard-registry'

type GuardEntry = { moduleId: string; guards: MutationGuard[] }

export const guardEntries: GuardEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/inbox-actions.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry — do not edit
import type { InboxActionDefinition } from '@open-mercato/shared/modules/inbox-actions'


type InboxActionConfigEntry = { moduleId: string; actions: InboxActionDefinition[] }

const entriesRaw: InboxActionConfigEntry[] = [
]

const entries = entriesRaw.filter((e): e is InboxActionConfigEntry => Array.isArray(e.actions) && e.actions.length > 0)

export const inboxActionConfigEntries = entries
export const inboxActions: InboxActionDefinition[] = entries.flatMap((e) => e.actions)

const actionTypeMap = new Map(inboxActions.map((a) => [a.type, a]))
export function getInboxAction(type: string): InboxActionDefinition | undefined {
  return actionTypeMap.get(type)
}
export function getRegisteredActionTypes(): string[] {
  return Array.from(actionTypeMap.keys())
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/injection-tables.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleInjectionTable } from '@open-mercato/shared/modules/widgets/injection'


export const injectionTables: Array<{ moduleId: string; table: ModuleInjectionTable }> = [

]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/injection-widgets.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ModuleInjectionWidgetEntry } from '@open-mercato/shared/modules/registry'

export const injectionWidgetEntries: ModuleInjectionWidgetEntry[] = [

]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/interceptors.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ApiInterceptor } from '@open-mercato/shared/lib/crud/api-interceptor'

type InterceptorEntry = { moduleId: string; interceptors: ApiInterceptor[] }

export const interceptorEntries: InterceptorEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/message-objects.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MessageObjectTypeDefinition } from '@open-mercato/shared/modules/messages/types'

type MessageObjectTypeEntry = { moduleId: string; types: MessageObjectTypeDefinition[] }

const entriesRaw: MessageObjectTypeEntry[] = [
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const messageObjectTypeEntries = entriesRaw
export const messageObjectTypes = allTypes

export function getMessageObjectTypes(): MessageObjectTypeDefinition[] {
  return allTypes
}

export function getMessageObjectType(module: string, entityType: string): MessageObjectTypeDefinition | undefined {
  return allTypes.find((entry) => entry.module === module && entry.entityType === entityType)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/message-types.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { MessageTypeDefinition } from '@open-mercato/shared/modules/messages/types'

type MessageTypeEntry = { moduleId: string; types: MessageTypeDefinition[] }

const entriesRaw: MessageTypeEntry[] = [
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const messageTypeEntries = entriesRaw
export const messageTypes = allTypes

export function getMessageTypes(): MessageTypeDefinition[] {
  return allTypes
}

export function getMessageType(type: string): MessageTypeDefinition | undefined {
  return allTypes.find((entry) => entry.type === type)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/messages.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentType } from 'react'
import type {
  MessageTypeDefinition,
  MessageObjectTypeDefinition,
  MessageListItemProps,
  MessageContentProps,
  MessageActionsProps,
  ObjectDetailProps,
  ObjectPreviewProps,
} from '@open-mercato/shared/modules/messages/types'
import { registerMessageObjectTypes } from '@open-mercato/core/modules/messages/lib/message-objects-registry'
import { configureMessageUiComponentRegistry } from '@open-mercato/core/modules/messages/components/utils/typeUiRegistry'

type MessageTypeEntry = { moduleId: string; types: MessageTypeDefinition[] }
type MessageObjectTypeEntry = { moduleId: string; types: MessageObjectTypeDefinition[] }

export type MessageListItemRenderers = Record<string, ComponentType<MessageListItemProps>>
export type MessageContentRenderers = Record<string, ComponentType<MessageContentProps>>
export type MessageActionsRenderers = Record<string, ComponentType<MessageActionsProps>>
export type MessageObjectDetailRenderers = Record<string, ComponentType<ObjectDetailProps>>
export type MessageObjectPreviewRenderers = Record<string, ComponentType<ObjectPreviewProps>>

export type MessageUiComponentRegistry = {
  listItemComponents: MessageListItemRenderers
  contentComponents: MessageContentRenderers
  actionsComponents: MessageActionsRenderers
  objectDetailComponents: MessageObjectDetailRenderers
  objectPreviewComponents: MessageObjectPreviewRenderers
}

const messageTypeEntriesRaw: MessageTypeEntry[] = [
]
const messageObjectTypeEntriesRaw: MessageObjectTypeEntry[] = [
]

const allMessageTypes = messageTypeEntriesRaw.flatMap((entry) => entry.types)
const allMessageObjectTypes = messageObjectTypeEntriesRaw.flatMap((entry) => entry.types)

const listItemComponents: MessageListItemRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.listItemComponent) && Boolean(typeDef.ListItemComponent))
    .map((typeDef) => [typeDef.ui!.listItemComponent!, typeDef.ListItemComponent!]),
)

const contentComponents: MessageContentRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.contentComponent) && Boolean(typeDef.ContentComponent))
    .map((typeDef) => [typeDef.ui!.contentComponent!, typeDef.ContentComponent!]),
)

const actionsComponents: MessageActionsRenderers = Object.fromEntries(
  allMessageTypes
    .filter((typeDef) => Boolean(typeDef.ui?.actionsComponent) && Boolean(typeDef.ActionsComponent))
    .map((typeDef) => [typeDef.ui!.actionsComponent!, typeDef.ActionsComponent!]),
)

const objectDetailComponents: MessageObjectDetailRenderers = Object.fromEntries(
  allMessageObjectTypes
    .filter((typeDef) => Boolean(typeDef.DetailComponent))
    .map((typeDef) => [\`\${typeDef.module}:\${typeDef.entityType}\`, typeDef.DetailComponent!]),
)

const objectPreviewComponents: MessageObjectPreviewRenderers = Object.fromEntries(
  allMessageObjectTypes
    .filter((typeDef) => Boolean(typeDef.PreviewComponent))
    .map((typeDef) => [\`\${typeDef.module}:\${typeDef.entityType}\`, typeDef.PreviewComponent!]),
)

const registry: MessageUiComponentRegistry = {
  listItemComponents,
  contentComponents,
  actionsComponents,
  objectDetailComponents,
  objectPreviewComponents,
}

export const messageClientTypeEntries = messageTypeEntriesRaw
export const messageClientObjectTypeEntries = messageObjectTypeEntriesRaw
export const messageUiComponentRegistry = registry

export function getMessageUiComponentRegistry(): MessageUiComponentRegistry {
  return registry
}

// Side-effects: register all message object types and configure the UI component registry on import.
for (const entry of messageObjectTypeEntriesRaw) {
  registerMessageObjectTypes(entry.types)
}
configureMessageUiComponentRegistry(registry)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/modules.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'


export const modules: Module[] = [
  
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/modules.runtime.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { createElement } from 'react'
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'


export const modules: Module[] = [
  
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/notification-handlers.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { NotificationHandler } from '@open-mercato/shared/modules/notifications/handler'

type NotificationHandlerEntry = { moduleId: string; handlers: NotificationHandler[] }

export const notificationHandlerEntries: NotificationHandlerEntry[] = [
]
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/notifications.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { ComponentType } from 'react'
import type { NotificationTypeDefinition, NotificationRendererProps } from '@open-mercato/shared/modules/notifications/types'

type NotificationTypeEntry = { moduleId: string; types: NotificationTypeDefinition[] }
export type NotificationRenderers = Record<string, ComponentType<NotificationRendererProps>>

const entriesRaw: NotificationTypeEntry[] = [
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)
const renderers: NotificationRenderers = Object.fromEntries(
  allTypes
    .filter((typeDef) => Boolean(typeDef.Renderer))
    .map((typeDef) => [typeDef.type, typeDef.Renderer!]),
)

export const notificationClientTypeEntries = entriesRaw
export const notificationClientTypes = allTypes
export const notificationRenderers = renderers

export function getNotificationRenderers(): NotificationRenderers {
  return renderers
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/notifications.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { NotificationTypeDefinition } from '@open-mercato/shared/modules/notifications/types'

type NotificationTypeEntry = { moduleId: string; types: NotificationTypeDefinition[] }

const entriesRaw: NotificationTypeEntry[] = [
]

const allTypes = entriesRaw.flatMap((entry) => entry.types)

export const notificationTypeEntries = entriesRaw
export const notificationTypes = allTypes

export function getNotificationTypes(): NotificationTypeDefinition[] {
  return allTypes
}

export function getNotificationType(type: string): NotificationTypeDefinition | undefined {
  return allTypes.find((t) => t.type === type)
}
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/payments.client.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry

export const paymentGatewayClientModuleCount = 0
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/search.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import type { SearchModuleConfig } from '@open-mercato/shared/modules/search'

type SearchConfigEntry = { moduleId: string; config: SearchModuleConfig | null }

const entriesRaw: SearchConfigEntry[] = [
]
const entries = entriesRaw.filter((entry): entry is { moduleId: string; config: SearchModuleConfig } => entry.config != null)

export const searchModuleConfigEntries = entries
export const searchModuleConfigs: SearchModuleConfig[] = entries.map((entry) => entry.config)
"
`;

exports[`generateModuleRegistry output snapshots produces stable output with zero modules: empty/translations-fields.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry
import { registerTranslatableFields } from '@open-mercato/shared/lib/localization/translatable-fields'

type TransFieldsEntry = { moduleId: string; fields: Record<string, string[]> }

const entries: TransFieldsEntry[] = [
]

const allFields: Record<string, string[]> = {}
for (const entry of entries) {
  for (const [key, value] of Object.entries(entry.fields)) {
    allFields[key] = value
  }
}

export const translatableFieldEntries = entries
export const allTranslatableFields = allFields
export const allTranslatableEntityTypes = Object.keys(allFields)

// Auto-register on import (side-effect)
registerTranslatableFields(allFields)
"
`;

exports[`generateModuleRegistryApp output snapshots produces stable modules.app.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry (app version)
// This file excludes route handlers and CLI commands from the request bootstrap path.
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'
import * as I0_orders from "@open-mercato/core/modules/orders/index"
import * as SETUP_orders_1 from "@open-mercato/core/modules/orders/setup"
import * as X_orders_2 from "@open-mercato/core/modules/orders/data/extensions"
import * as ACL_orders_3 from "@open-mercato/core/modules/orders/acl"
import * as CE_orders_4 from "@open-mercato/core/modules/orders/ce"
import T_orders_en_C from "@open-mercato/core/modules/orders/i18n/en.json"
import T_orders_pl_C from "@open-mercato/core/modules/orders/i18n/pl.json"
import * as I5_products from "@open-mercato/core/modules/products/index"
import * as X_products_6 from "@open-mercato/core/modules/products/data/extensions"
import * as ACL_products_7 from "@open-mercato/core/modules/products/acl"
import * as I8_custom_app from "../../src/modules/custom_app/index"
import * as ACL_custom_app_9 from "../../src/modules/custom_app/acl"

export const modules: Module[] = [
  {
      id: "orders",
      info: I0_orders.metadata,
      translations: { 'en': T_orders_en_C as unknown as Record<string,string>, 'pl': T_orders_pl_C as unknown as Record<string,string> },
      subscribers: [{ id: "orders:on-created", event: "orders.order.created", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-created"), "orders:on-created") }, { id: "orders:on-payment", event: "payments.payment.completed", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-payment"), "orders:on-payment") }],
      workers: [{ id: "orders:workers:sync-job", queue: "orders.sync", concurrency: 2, handler: createLazyModuleWorker(() => import("@open-mercato/core/modules/orders/workers/sync-job"), "orders:workers:sync-job") }],
      entityExtensions: ((X_orders_2.default ?? X_orders_2.extensions) as any) || [],
      customFieldSets: [...((( CE_orders_4.default ?? CE_orders_4.entities) as any) || []).filter((e: any) => Array.isArray(e.fields) && e.fields.length).map((e: any) => ({ entity: e.id, fields: e.fields, source: "orders" }))],
      features: ((ACL_orders_3.default ?? ACL_orders_3.features) as any) || [],
      customEntities: ((CE_orders_4.default ?? CE_orders_4.entities) as any) || [],
      dashboardWidgets: [{ moduleId: "orders", key: "orders:revenue:widget", source: "package", loader: () => import("@open-mercato/core/modules/orders/widgets/dashboard/revenue/widget").then((mod) => mod.default ?? mod) }],
      setup: (SETUP_orders_1.default ?? SETUP_orders_1.setup) || undefined,
      
      
    },
  {
      id: "products",
      info: I5_products.metadata,
      
      
      
      entityExtensions: ((X_products_6.default ?? X_products_6.extensions) as any) || [],
      customFieldSets: [],
      features: ((ACL_products_7.default ?? ACL_products_7.features) as any) || [],
      
      
      
      
      
    },
  {
      id: "custom_app",
      info: I8_custom_app.metadata,
      
      subscribers: [{ id: "custom_app:on-action", event: "custom_app.action.fired", persistent: undefined, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("../../src/modules/custom_app/subscribers/on-action"), "custom_app:on-action") }],
      
      
      customFieldSets: [],
      features: ((ACL_custom_app_9.default ?? ACL_custom_app_9.features) as any) || [],
      
      dashboardWidgets: [{ moduleId: "custom_app", key: "custom_app:my-widget:widget", source: "app", loader: () => import("../../src/modules/custom_app/widgets/dashboard/my-widget/widget").then((mod) => mod.default ?? mod) }],
      
      
      
    }
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistryApp output snapshots produces stable modules.app.generated.ts with zero modules 1`] = `
"// AUTO-GENERATED by mercato generate registry (app version)
// This file excludes route handlers and CLI commands from the request bootstrap path.
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'


export const modules: Module[] = [
  
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistryCli output snapshots produces stable modules.cli.generated.ts 1`] = `
"// AUTO-GENERATED by mercato generate registry (CLI version)
// This file excludes Next.js dependent code (routes, APIs, injection widgets)
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'
import * as I0_orders from "@open-mercato/core/modules/orders/index"
import * as SETUP_orders_1 from "@open-mercato/core/modules/orders/setup"
import * as X_orders_2 from "@open-mercato/core/modules/orders/data/extensions"
import * as ACL_orders_3 from "@open-mercato/core/modules/orders/acl"
import * as CE_orders_4 from "@open-mercato/core/modules/orders/ce"
import T_orders_en_C from "@open-mercato/core/modules/orders/i18n/en.json"
import T_orders_pl_C from "@open-mercato/core/modules/orders/i18n/pl.json"
import * as I5_products from "@open-mercato/core/modules/products/index"
import * as X_products_6 from "@open-mercato/core/modules/products/data/extensions"
import * as ACL_products_7 from "@open-mercato/core/modules/products/acl"
import * as I8_custom_app from "../../src/modules/custom_app/index"
import * as ACL_custom_app_9 from "../../src/modules/custom_app/acl"

export const modules: Module[] = [
  {
      id: "orders",
      info: I0_orders.metadata,
      
      translations: { 'en': T_orders_en_C as unknown as Record<string,string>, 'pl': T_orders_pl_C as unknown as Record<string,string> },
      subscribers: [{ id: "orders:on-created", event: "orders.order.created", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-created"), "orders:on-created") }, { id: "orders:on-payment", event: "payments.payment.completed", persistent: true, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("@open-mercato/core/modules/orders/subscribers/on-payment"), "orders:on-payment") }],
      workers: [{ id: "orders:workers:sync-job", queue: "orders.sync", concurrency: 2, handler: createLazyModuleWorker(() => import("@open-mercato/core/modules/orders/workers/sync-job"), "orders:workers:sync-job") }],
      entityExtensions: ((X_orders_2.default ?? X_orders_2.extensions) as any) || [],
      customFieldSets: [...((( CE_orders_4.default ?? CE_orders_4.entities) as any) || []).filter((e: any) => Array.isArray(e.fields) && e.fields.length).map((e: any) => ({ entity: e.id, fields: e.fields, source: "orders" }))],
      features: ((ACL_orders_3.default ?? ACL_orders_3.features) as any) || [],
      customEntities: ((CE_orders_4.default ?? CE_orders_4.entities) as any) || [],
      dashboardWidgets: [{ moduleId: "orders", key: "orders:revenue:widget", source: "package", loader: () => import("@open-mercato/core/modules/orders/widgets/dashboard/revenue/widget").then((mod) => mod.default ?? mod) }],
      
      setup: (SETUP_orders_1.default ?? SETUP_orders_1.setup) || undefined,
      
      
    },
  {
      id: "products",
      info: I5_products.metadata,
      
      
      
      
      entityExtensions: ((X_products_6.default ?? X_products_6.extensions) as any) || [],
      customFieldSets: [],
      features: ((ACL_products_7.default ?? ACL_products_7.features) as any) || [],
      
      
      
      
      
      
    },
  {
      id: "custom_app",
      info: I8_custom_app.metadata,
      
      
      subscribers: [{ id: "custom_app:on-action", event: "custom_app.action.fired", persistent: undefined, sync: undefined, priority: undefined, handler: createLazyModuleSubscriber(() => import("../../src/modules/custom_app/subscribers/on-action"), "custom_app:on-action") }],
      
      
      customFieldSets: [],
      features: ((ACL_custom_app_9.default ?? ACL_custom_app_9.features) as any) || [],
      
      dashboardWidgets: [{ moduleId: "custom_app", key: "custom_app:my-widget:widget", source: "app", loader: () => import("../../src/modules/custom_app/widgets/dashboard/my-widget/widget").then((mod) => mod.default ?? mod) }],
      
      
      
      
    }
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;

exports[`generateModuleRegistryCli output snapshots produces stable modules.cli.generated.ts with zero modules 1`] = `
"// AUTO-GENERATED by mercato generate registry (CLI version)
// This file excludes Next.js dependent code (routes, APIs, injection widgets)
import { createLazyModuleSubscriber, createLazyModuleWorker, type Module } from '@open-mercato/shared/modules/registry'


export const modules: Module[] = [
  
]
export const modulesInfo = modules.map(m => ({ id: m.id, ...(m.info || {}) }))
export default modules
"
`;
